--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 Expert Physiotherapy Care
             </h1>
             <p class="text-lg md:text-xl mb-12 max-w-3xl mx-auto opacity-95 animate-fade-in-up delay-200 drop-shadow-md">
-                Procare  is dedicated toward expert advice, tips, and exercises to help you recover, stay active, and live pain-free. Whether you're dealing with an injury, managing chronic pain, or simply looking to improve your mobility, we offers professional guidance to support your journey to better health.
+                Procare is dedicated to offering expert advice and exercises to help you recover, stay active, and live pain-free. Whether you’re healing from an injury, managing chronic pain, or aiming to improve your mobility, we provide professional guidance to support your journey to better health.
             </p>
             <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-6">
                 <a href="#contact" class="btn-primary animate-fade-in-up delay-400 hover:text-green-500">Book Appointment</a>
@@ -158,7 +158,7 @@
             </div>
             <div class="text-center">
                 <h3 class="text-xl font-bold text-gray-800">Dr. Pawan Kumar</h3>
-                <p class="text-gray-600">BPT, FNMT, Certified Dry Needling Expert, <br>
+                <p class="text-gray-600">BPT, MPT, FNMT, Certified Dry Needling Expert, <br>
                      Myo-Facial Release, Pelvic Floor</p>
                 <p class="text-gray-600">5+ Years of Experience</p>
             </div>
