--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             What Our Patients Say
         </h2>
         <p class="section-subheading py-10">
-            Hear from our patients about their experiences and success stories with HealthMotion Physiotherapy.
+            Hear from our patients about their experiences and success stories with Procare Physiotherapy.
         </p>
 
         <!-- Scrollable Wrapper -->
@@ -362,27 +362,7 @@
             </div>
 
             <!-- Testimonial Card 2 -->
-            <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
-                <div class="flex items-center mb-6">
-                    <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
-                    </svg>
-                    <div>
-                        <p class="font-bold text-gray-800 text-lg">Shreya Rai</p>
-                        <p class="text-sm text-gray-600">Chronic Back Pain</p>
-                    </div>
-                </div>
-                <p class="text-gray-700 italic mb-6 leading-relaxed">
-                    "I had been struggling with constant back and neck pain for months, and after trying everything else, I finally booked an appointment here. I’m so glad I did! The physiotherapist was extremely knowledgeable, patient, and professional. They not only treated the pain effectively but also helped me understand the root cause and taught me exercises to prevent it from coming back. I felt real relief after just a few sessions. Highly recommended for anyone dealing with chronic pain or stiffness!"
-                </p>
-                <div class="flex">
-                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
-                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
-                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
-                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
-                    <svg class="w-5 h-5 star-empty" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
-                </div>
-            </div>
+           
       <!-- Testimonial Card 3 -->
             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
@@ -391,7 +371,7 @@
                     </svg>
                     <div>
                         <p class="font-bold text-gray-800 text-lg">Aman Bhagat</p>
-                        <p class="text-sm text-gray-600">Post-Surgery Recovery</p>
+                        <p class="text-sm text-gray-600">Gym Injury</p>
                     </div>
                 </div>
                 <p class="text-gray-700 italic mb-6 leading-relaxed">
@@ -414,7 +394,7 @@
                     </svg>
                     <div>
                         <p class="font-bold text-gray-800 text-lg">Gaurav Prajapat</p>
-                        <p class="text-sm text-gray-600">Scitica Patient</p>
+                        <p class="text-sm text-gray-600">Sciatica Patient</p>
                     </div>
                 </div>
                 <p class="text-gray-700 italic mb-6 leading-relaxed">
@@ -473,7 +453,27 @@
                     <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
                 </div>
             </div>
-            
+             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
+                <div class="flex items-center mb-6">
+                    <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
+                    </svg>
+                    <div>
+                        <p class="font-bold text-gray-800 text-lg">Shreya Rai</p>
+                        <p class="text-sm text-gray-600">Chronic Back Pain</p>
+                    </div>
+                </div>
+                <p class="text-gray-700 italic mb-6 leading-relaxed">
+                    "I had been struggling with constant back and neck pain for months, and after trying everything else, I finally booked an appointment here. I’m so glad I did! The physiotherapist was extremely knowledgeable, patient, and professional. They not only treated the pain effectively but also helped me understand the root cause and taught me exercises to prevent it from coming back. I felt real relief after just a few sessions. Highly recommended for anyone dealing with chronic pain or stiffness!"
+                </p>
+                <div class="flex">
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-empty" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                </div>
+            </div>
         </div>
     </div>
 </section>
