--- a/index.html
+++ b/index.html
@@ -185,14 +185,16 @@
 
     <!-- Gallery Section -->
     <div class="container mx-auto px-6 mt-16">
-        <h3 class="text-3xl font-bold text-center mb-8 py-10">Gallery</h3>
-        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
-            <img src="assets/img1.jpg" class="rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 1">
-            <img src="assets/img2.jpeg" class="rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 2">
-            <img src="assets/gallery3.jpg" class="rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 3">
-            <img src="assets/gallery4.jpg" class="rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 4">
-        </div>
+    <h3 class="text-3xl font-bold text-center mb-8 py-10">Gallery</h3>
+    <div class="flex gap-4 overflow-x-auto overflow-y-hidden">
+        <img src="assets/img1.jpg" class="w-64 rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 1">
+        <img src="assets/img2.jpeg" class="w-64 rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 2">
+        <img src="assets/img3.jpeg" class="w-64 rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 3">
+        <img src="assets/img4.jpeg" class="w-64 rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 4">
+        <img src="assets/img6.jpeg" class="w-64 rounded-lg shadow-md hover:scale-105 transition-transform duration-300" alt="Gallery 5">
     </div>
+</div>
+
 </section>
 
 
