--- a/index.html
+++ b/index.html
@@ -3,7 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procare</title>
+    <!-- Basic SEO -->
+   <title>ProCare Physiotherapy & Rehabilitation Centre</title>
+   <meta name="description" content="ProCare Physiotherapy & Rehabilitation Centre is dedicated to restoring your mobility, strength, and quality of life.">
+   <meta name="keywords" content="physiotherapy, rehabilitation, ProCare, health, mobility, Ludhiana, therapy clinic">
+   <meta name="author" content="ProCare Physiotherapy">
+
+<!-- Open Graph (for social media sharing) -->
+   <meta property="og:title" content="ProCare Physiotherapy & Rehabilitation Centre">
+   <meta property="og:description" content="ProCare Physiotherapy & Rehabilitation Centre is dedicated to restoring your mobility, strength, and quality of life.">
+   <meta property="og:url" content="https://procarept.in">
+   <meta property="og:type" content="website">
+   <meta property="og:image" content="https://procarept.in/assets/logo.png">
+
+<!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ProCare Physiotherapy & Rehabilitation Centre">
+  <meta name="twitter:description" content="Restoring your mobility, strength, and quality of life.">
+  <meta name="twitter:image" content="https://procarept.in/assets/logo.png">
+
+<!-- Favicon -->
+ <link rel="icon" type="image/png" href="https://procarept.in/assets/favicon.png">
+
+<!-- Schema Markup (for Google Rich Results & Ratings) -->
+ <script type="application/ld+json">
+ {
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "ProCare Physiotherapy & Rehabilitation Centre",
+  "image": "https://procarept.in/assets/logo.png",
+  "description": "ProCare Physiotherapy & Rehabilitation Centre is dedicated to restoring your mobility, strength, and quality of life.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Your Address",
+    "addressLocality": "Ludhiana",
+    "addressCountry": "India"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+   }
+ }
+ </script>
+
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
