--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Basic SEO -->
-   <title>ProCare Physiotherapy & Rehabilitation Centre</title>
+   <title>Procare Physiotherapy & Rehabilitation Centre</title>
    <meta name="description" content="ProCare Physiotherapy & Rehabilitation Centre is dedicated to restoring your mobility, strength, and quality of life.">
    <meta name="keywords" content="physiotherapy, rehabilitation, ProCare, health, mobility, Ludhiana, therapy clinic">
    <meta name="author" content="ProCare Physiotherapy">
