--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:image" content="https://procarept.in/assets/logo.png">
 
 <!-- Favicon -->
- <link rel="icon" type="image/png" href="https://procarept.in/assets/favicon.png">
+ <link rel="icon" type="image/png" href="https://procarept.in/assets/png.png">
 
 <!-- Schema Markup (for Google Rich Results & Ratings) -->
  <script type="application/ld+json">
@@ -31,12 +31,12 @@
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "ProCare Physiotherapy & Rehabilitation Centre",
-  "image": "https://procarept.in/assets/logo.png",
+  "image": "https://procarept.in/assets/png.png",
   "description": "ProCare Physiotherapy & Rehabilitation Centre is dedicated to restoring your mobility, strength, and quality of life.",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "Your Address",
-    "addressLocality": "Ludhiana",
+    "streetAddress": "12/1 , Mithapur Extn. Part-1",
+    "addressLocality": "New Delhi",
     "addressCountry": "India"
   },
   "aggregateRating": {
