--- a/index.html
+++ b/index.html
@@ -367,6 +367,21 @@
                 </p>
             </div>
 
+            <!-- 10. Homecare -->
+            <div class="group bg-red-50 p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 hover:bg-gradient-to-br from-red-100 to-red-200">
+                <div class="text-purple-600 mb-6 transition-transform duration-300 group-hover:scale-110">
+                    <svg class="w-14 h-14 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0h6" />
+                    </svg>
+                </div>
+                <h3 class="text-2xl font-bold text-purple-800 mb-4 text-center">Home Care</h3>
+                <p class="text-gray-700 text-center leading-relaxed">
+                    Expert physiotherapy sessions delivered at your home, ensuring comfort, convenience, and personalized recovery support tailored to your needs.
+                </p>
+            </div>
+
+
         </div>
     </div>
 </section>
@@ -383,7 +398,7 @@
 
         <!-- Scrollable Wrapper -->
         <div class="flex space-x-6 overflow-x-auto scrollbar-hide pb-8 snap-x snap-mandatory">
-            <!-- Testimonial Card 1 -->
+        <!-- Testimonial Card 1 -->
             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
                     <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
@@ -405,10 +420,8 @@
                     <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
                 </div>
             </div>
-
-            <!-- Testimonial Card 2 -->
            
-      <!-- Testimonial Card 3 -->
+      <!-- Testimonial Card 2 -->
             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
                     <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
@@ -420,7 +433,7 @@
                     </div>
                 </div>
                 <p class="text-gray-700 italic mb-6 leading-relaxed">
-                    "I had an excellent experience, from the first consultation, I was impressed by the professionalism, knowledge, and care shown by the physiotherapist. The treatment plan was tailored to my specific needs and throughout the sessions, I received consistent support and guidance. Each visit brought noticeable improvement. The environment was clean, well-maintained, and welcoming.I would confidently recommend this clinic to anyone in need of physiotherapy – whether for injury recovery, pain relief, or long-term posture correction. You will be in good hands"
+                    "I had an excellent experience, from the first consultation, I was impressed by the professionalism, knowledge, and care shown by the physiotherapist. The treatment plan was tailored to my specific needs and throughout the sessions, I received consistent support and guidance. Each visit brought noticeable improvement. The environment was clean, well-maintained, and welcoming.I would confidently recommend this clinic to anyone in need of physiotherapy whether for injury recovery, pain relief, or long-term posture correction. You will be in good hands"
                 </p>
                 <div class="flex">
                     <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
@@ -431,7 +444,7 @@
                 </div>
             </div>
 
-            <!-- Testimonial Card 4 -->
+            <!-- Testimonial Card 3 -->
             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
                     <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
@@ -454,7 +467,7 @@
                 </div>
             </div>
 
-             <!-- Testimonial Card 5 -->
+             <!-- Testimonial Card 4 -->
             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
                     <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
@@ -476,6 +489,33 @@
                     <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
                 </div>
             </div>
+                <!-- Testimonial Card 5 -->
+            <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
+                <div class="flex items-center mb-6">
+                    <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
+                    </svg>
+                    <div>
+                        <p class="font-bold text-gray-800 text-lg">Vibhor Kumar</p>
+                        <p class="text-sm text-gray-600">Pelvis Issue</p>
+                    </div>
+                </div>
+                <p class="text-gray-700 italic mb-6 leading-relaxed">
+                    "I recently visited Procare Clinic for a pelvis-related issue and had an excellent experience.
+                    The therapists were highly professional, understanding, and made me feel comfortable throughout the sessions.
+                    Dr. Pawan Sir treatment approach was effective, and I noticed significant improvement in my condition.
+                    The clinic environment is calm, clean, and supportive for recovery.
+                    Overall, I’m very satisfied with their service and would highly recommend Procare to anyone seeking quality care."
+                </p>
+                <div class="flex">
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                </div>
+            </div>
+
              <!-- Testimonial Card 6 -->
             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
@@ -498,6 +538,33 @@
                     <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
                 </div>
             </div>
+                <!-- Testimonial Card 7 -->
+            <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
+                <div class="flex items-center mb-6">
+                    <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
+                    </svg>
+                    <div>
+                        <p class="font-bold text-gray-800 text-lg">Soni</p>
+                        <p class="text-sm text-gray-600">Frozen Shoulder</p>
+                    </div>
+                </div>
+                <p class="text-gray-700 italic mb-6 leading-relaxed">
+                    "Highly recommended...
+                    It's very good. If you're suffering from any problem, you should definitely join Procare. I'm saying this because I started seeing improvement the very next day after joining, and now I'm completely fit.
+
+                    The doctor's behavior is very good, so don't worry, just join and get your problem fixed."
+                </p>
+                <div class="flex">
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                </div>
+            </div>
+
+                <!-- Testimonial Card 8 -->
              <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
                 <div class="flex items-center mb-6">
                     <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
@@ -510,6 +577,29 @@
                 </div>
                 <p class="text-gray-700 italic mb-6 leading-relaxed">
                     "I had been struggling with constant back and neck pain for months, and after trying everything else, I finally booked an appointment here. I’m so glad I did! The physiotherapist was extremely knowledgeable, patient, and professional. They not only treated the pain effectively but also helped me understand the root cause and taught me exercises to prevent it from coming back. I felt real relief after just a few sessions. Highly recommended for anyone dealing with chronic pain or stiffness!"
+                </p>
+                <div class="flex">
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                    <svg class="w-5 h-5 star-empty" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
+                </div>
+            </div>
+
+                <!-- Testimonial Card 9 -->
+             <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 min-w-[400px] snap-center">
+                <div class="flex items-center mb-6">
+                    <svg class="w-16 h-16 rounded-full mr-4 text-blue-600 bg-blue-100 p-2" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
+                    </svg>
+                    <div>
+                        <p class="font-bold text-gray-800 text-lg">Sanchit</p>
+                        <p class="text-sm text-gray-600">Neck Mobility Issues</p>
+                    </div>
+                </div>
+                <p class="text-gray-700 italic mb-6 leading-relaxed">
+                    "I visited this physiotherapist for my neck mobility issues, and the experience was excellent from start to finish. They took the time to thoroughly assess my condition, explained the cause in simple terms, and created a clear treatment plan. The sessions were a perfect balance of targeted exercises, gentle manual therapy. I noticed significant improvement in my range of motion and reduced stiffness after just first visit. The atmosphere was friendly and professional. Highly recommended for anyone struggling with any kind of mobility issues."
                 </p>
                 <div class="flex">
                     <svg class="w-5 h-5 star-filled" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279L12 18.896l-7.416 3.817 1.48-8.279L.001 9.306l8.332-1.151L12 .587z"/></svg>
