--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@
 
             <!-- 10. Homecare -->
             <div class="group bg-red-50 p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 hover:bg-gradient-to-br from-red-100 to-red-200">
-                <div class="text-purple-600 mb-6 transition-transform duration-300 group-hover:scale-110">
+                <div class="text-red-500 mb-6 transition-transform duration-300 group-hover:scale-110">
                     <svg class="w-14 h-14 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0h6" />
                     </svg>
                 </div>
-                <h3 class="text-2xl font-bold text-purple-800 mb-4 text-center">Home Care</h3>
+                <h3 class="text-2xl font-bold text-red-500 mb-4 text-center">Home Care</h3>
                 <p class="text-gray-700 text-center leading-relaxed">
                     Expert physiotherapy sessions delivered at your home, ensuring comfort, convenience, and personalized recovery support tailored to your needs.
                 </p>
